# yaht

./: Cargo.toml  PLAN.md  README.md
crates/yaht-client/: Cargo.toml
crates/yaht-client/src/: app.rs  event.rs  input.rs  main.rs  network.rs  solo.rs
crates/yaht-client/src/ui/: connect.rs  dice_widget.rs  game.rs  help_popup.rs  lobby.rs  mod.rs  results.rs  scoreboard_widget.rs
crates/yaht-common/: Cargo.toml
crates/yaht-common/src/: ai.rs  dice.rs  game.rs  lib.rs  lobby.rs  player.rs  protocol.rs  scoring.rs
crates/yaht-server/: Cargo.toml
crates/yaht-server/src/: connection.rs  handler.rs  lobby.rs  main.rs  room.rs  server.rs
