[workspace]
resolver = "2"
members = [
    "crates/yaht-common",
    "crates/yaht-server",
    "crates/yaht-client",
]

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
uuid = { version = "1", features = ["v4", "serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "2"
anyhow = "1"
rand = "0.8"
chrono = { version = "0.4", features = ["serde"] }
bytes = "1"
futures = "0.3"
