[package]
name = "yaht-client"
version = "0.1.0"
edition = "2021"

[dependencies]
yaht-common = { path = "../yaht-common" }
tokio.workspace = true
tokio-util.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
bytes.workspace = true
futures.workspace = true
ratatui = "0.29"
crossterm = { version = "0.28", features = ["event-stream"] }
