[package]
name = "yaht-common"
version = "0.1.0"
edition = "2021"

[dependencies]
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
thiserror.workspace = true
rand.workspace = true
chrono.workspace = true
tokio-util.workspace = true
tokio.workspace = true
bytes.workspace = true
futures.workspace = true
anyhow.workspace = true
